--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>chapter04-open-closed</module>
         <module>chapter05-1-dependence</module>
         <module>chapter05-2-liskov</module>
+        <module>chapter06-decorator</module>
     </modules>
 
     <properties>
