建造者模式

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>chapter10-template-method</module>
         <module>chapter11-demeter</module>
         <module>chapter12-facade</module>
+        <module>chapter13-builder</module>
     </modules>
 
     <properties>
