--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>Demo-JavaFX</module>
-        <module>chapter02-CeLueMoShi</module>
+        <module>chapter02-strategy</module>
         <module>chapter01-simple-factory</module>
         <module>chapter03-single</module>
         <module>chapter04-open-closed</module>
