--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>demo-future</module>
         <module>chapter15-abstract-factory</module>
         <module>chapter16-state</module>
+        <module>chapter17-adapter</module>
     </modules>
 
     <properties>
